--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+charset = utf-8
 
 [*.{c,h}]
 indent_style = space
@@ -12,3 +13,8 @@ indent_size = 4
 [Makefile]
 indent_style = tab
 indent_size = 4
+
+[*.yaml]
+indent_style = space
+indent_size = 2
+insert_final_newline = true
