--- a/src/Makefile
+++ b/src/Makefile
@@ -1,43 +1,24 @@
+# Source code Makefile
+#
 # Copyright (c) 2025 Ivan Guerreschi <ivan.guerreschi.dev@gmail.com>
 # All rights reserved.
 #
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions are met:
-#
-# 1. Redistributions of source code must retain the above copyright notice,
-#    this list of conditions and the following disclaimer.
-#
-# 2. Redistributions in binary form must reproduce the above copyright notice,
-#    this list of conditions and the following disclaimer in the documentation
-#    and/or other materials provided with the distribution.
-#
-# 3. Neither the name of the copyright holder nor the names of its
-#    contributors may be used to endorse or promote products derived from
-#    this software without specific prior written permission.
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
-# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
-# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
-# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
-# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-# POSSIBILITY OF SUCH DAMAGE.
+# Use of this source code is governed by a BSD-style
+# license that can be found in the LICENSE file.
 
 # Phony targets
 .PHONY: all clean
 
 # Compiler and flags
 CC = gcc
-CFLAGS = -Wall -Wextra -O2 -ggdb
+CFLAGS = -Wall -Wextra -O2 -ggdb -Werror -Wformat=2 \
+		 -Wunused -Wmissing-prototypes -Wstrict-prototypes \
+		 -Wcast-qual -Wnull-dereference -Wduplicated-cond
 LDLIBS = -L../deps/lua/src -l:liblua.a -lm
 LDFLAGS = -I../deps/lua/src -L../deps/lua/src -l:liblua.a
 
 # Source files
-SRCS = info.c luascript.c konsolenfisch.c terminal.c
+SRCS = info.c luascript.c konsolenfisch.c terminal.c user_input.c
 
 # Object files
 OBJS = $(SRCS:.c=.o)
