--- a/.editorconfig
+++ b/.editorconfig
@@ -14,7 +14,7 @@ indent_size = 4
 indent_style = tab
 indent_size = 4
 
-[*.yaml]
+[*.{yaml, lua}]
 indent_style = space
 indent_size = 2
 insert_final_newline = true
