Add GLPv3 license

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,19 @@
 # Source code Makefile
 #
-# Copyright (c) 2025 Ivan Guerreschi <ivan.guerreschi.dev@gmail.com>
-# All rights reserved.
+# Copyright (C) 2025 Ivan Guerreschi.
 #
-# Use of this source code is governed by a BSD-style
-# license that can be found in the LICENSE file.
+#  This program is free software: you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation, either version 3 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 # Phony targets
 .PHONY: all clean
@@ -13,8 +22,7 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -O2 -ggdb -Werror -Wformat=2 \
 		 -Wunused -Wmissing-prototypes -Wstrict-prototypes \
-		 -Wcast-qual -Wnull-dereference -Wduplicated-cond \
-		 -fdiagnostics-color=always
+		 -Wcast-qual -Wnull-dereference -Wduplicated-cond
 LDLIBS = -L../lua/src -l:liblua.a -lm
 LDFLAGS = -I../lua/src -l:liblua.a
 
