--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,23 @@
 root = true
 
-[*]
+[{*.{c,h,},Makefile}]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = true
-charset = utf-8
+indent_style = tab
+indent_size = 8
 
-[*.{c,h}]
+[*.{py}]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
 indent_style = space
 indent_size = 4
 
-[Makefile]
-indent_style = tab
-indent_size = 4
-
-[*.{yaml, lua}]
+[*.{yaml,lua}]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
 indent_style = space
 indent_size = 2
-insert_final_newline = true
+
